fix(style): correct implementation of dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 :root {
 	--background: #ffffff;
 	--foreground: #171717;
-	/* color-scheme: dark; */
+	color-scheme: dark;
 }
 
 .container {
@@ -38,4 +38,9 @@ body {
 	background: var(--background);
 	color: var(--foreground);
 	font-family: Arial, Helvetica, sans-serif;
+	@apply bg-white text-zinc-900;
+}
+
+.dark body {
+	@apply bg-zinc-950 text-zinc-100;
 }
